better fonts and restricted height for sections on mobile

--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
 <body>
   <div class="main">
     <div class="section center text-center">
-      <p>
+      <h4>
         We're getting married!
-      </p>
-      <h1>
+      </h4>
+      <h1 class="title">
         Jared &amp; Linmarie
       </h1>
-      <p>
+      <h4>
         17.09.2025
-      </p>
+      </h4>
     </div>
-    <div class="section alternate">
-
+    <div class="section alternate center text-center">
+      <h2>
+        Some really important info about dates
+      </h2>
     </div>
   </div>
 
