--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="main">
-    <div class="section center text-center">
+    <div class="section guitar center text-center">
       <h4>
         We're getting married!
       </h4>
@@ -20,6 +20,17 @@
       <h2>
         Some really important info about dates
       </h2>
+    </div>
+    <div class="section ring-on-guitar center text-center">
+      <h4>
+        We're getting married!
+      </h4>
+      <h1 class="title">
+        Jared &amp; Linmarie
+      </h1>
+      <h4>
+        17.09.2025
+      </h4>
     </div>
   </div>
 
